Some tweaks to the statusbar -- mostly styling (due to r18222). - the statusbar got too high (because of the added menu/toolbarbutton),   recovered some of that height - alignment for the "File Type" panel - spacing for the Syntax Check panel - remove the height limit on the File Type panel popup (not necessary and   annoying to have to scroll within it) - fix the tooltip not showing up on the File Type panel
r=shanec

(integrated from komodo (trunk) change 18774 by trentm)


git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@1394 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -111,6 +111,13 @@ menuitem.statusbar-label > label
 {
   font: status-bar;
 }
+statusbarpanel > menu.statusbar-label {
+  /* This is a HACK to get around the space seemingly left
+   * for the checkbox -- though I'm not sure where that
+   * space *is* in the XBL, perhaps in the default theme CSS.
+   */
+  margin-left: -10px;
+}
 statusbarpanel > toolbarbutton[type="menu-button"],
 statusbarpanel > toolbarbutton[type="menu-button"] > toolbarbutton {
   padding: 0px;
@@ -118,7 +125,12 @@ statusbarpanel > toolbarbutton[type="menu-button"] > toolbarbutton {
 }
 statusbarpanel > toolbarbutton[type="menu-button"] > dropmarker,
 statusbarpanel > menu > .menu-right {
+  margin-right: -2px;
   list-style-image: url("chrome://komodo/skin/images/menupopup_arrows.png");
+}
+statusbarpanel > toolbarbutton[type="menu-button"] {
+  padding: 0px;
+  margin: -3px 0px;
 }
 
 
